@@ -6,8 +6,10 @@ fusionforge (5.0.2-1+) UNRELEASED; urgency=low
   * Fix detection of PostgreSQL's init script (closes: #596929).
   * Updated Portuguese Debconf translations (closes: #597354).
   * Support rsyslog as well as syslogd (closes: 535580).
+  * Handle amd64 architectures and add missing files in chroot creation
+    (closes: #396128, #536055).
 
- -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 15:19:44 +0200
+ -- Roland Mas <lolando@debian.org>  Sun, 03 Oct 2010 15:35:43 +0200
 
 fusionforge (5.0.2-1) unstable; urgency=low
 
